deployment/k8s/doctorservice-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: doctorservice
  labels:
    app: doctorservice
spec:
  replicas: 2
  selector:
    matchLabels:
      app: doctorservice
  template:
    metadata:
      labels:
        app: doctorservice
    spec:
      containers:
        - name: doctorservice
          image: vikash3117/doctorservice:latest
          ports:
            - containerPort: 3003
          readinessProbe:
            httpGet:
              path: /api/v1/health
              port: 3003
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /api/v1/health
              port: 3003
            initialDelaySeconds: 30
            periodSeconds: 15
---
apiVersion: v1
kind: Service
metadata:
  name: doctorservice
spec:
  selector:
    app: doctorservice
  ports:
    - protocol: TCP
      port: 3003
      targetPort: 3003
  type: ClusterIP
