deployment/k8s/patientservice-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: patientservice
  labels:
    app: patientservice
spec:
  replicas: 2
  selector:
    matchLabels:
      app: patientservice
  template:
    metadata:
      labels:
        app: patientservice
    spec:
      containers:
        - name: patientservice
          image: vikash3117/patientservic:latest
          ports:
            - containerPort: 3001
          readinessProbe:
            httpGet:
              path: /api/v1/health
              port: 3001
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /api/v1/health
              port: 3001
            initialDelaySeconds: 30
            periodSeconds: 15
---
apiVersion: v1
kind: Service
metadata:
  name: patientservice
spec:
  selector:
    app: patientservice
  ports:
    - protocol: TCP
      port: 3001
      targetPort: 3001
  type: ClusterIP
